...
          )),
          actions: [
            TextButton(
                onPressed: () {
                  Navigator.pop(context);
                },
                child: const Text('Cancel')),
            TextButton(
                onPressed: () async {
                  Navigator.pop(context, stripColor);
                },
                child: const Text('Confirm'))
          ],
        );
      });

  Future<void> sendStripColor() async {
    var helper = MQTTHelper.instance;
...
